<resources>
    <string name="app_name">MovieInfo</string>
    <string name="title_activity_movie_list">MovieListActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="now_playing">Now Playing</string>
    <string name="more">More</string>
    <string name="popular">Popular</string>
    <string name="toprated_movies">Top Rated</string>
    <string name="upcoming_movies">Upcoming</string>
    <string name="watched">Watched</string>
    <string name="watch_later">Watch Later</string>
    <string name="movie_image">Movie Image</string>
    <string name="image_for_plot">Image for plot</string>
    <string name="release_date">Release Date</string>
    <string name="director">Director</string>
    <string name="run_time">Run Time</string>
    <string name="meta_score">Meta Score</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="image">image</string>
    <string name="cast">Cast</string>
    <string name="images_and_videos">Images and Videos</string>
    <string name="recommendations">Recommendations</string>
    <string name="joss_whedon">Joss Whedon</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>

    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="poster_transition">poster_transition</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="tv_airing_today">Airing Today</string>
    <string name="on_the_air">On the Air</string>
    <string name="title_activity_tv_show_detail">TvShowDetailActivity</string>
    <string name="seasons">Seasons</string>
    <string name="episodes">Episodes</string>
    <string name="people">People</string>
    <string name="title_activity_personal_detail">PersonalDetailActivity</string>
    <string name="star_image">Star Image</string>
    <string name="biography">Biography</string>
    <string name="casted_in">Casted in</string>
    <string name="discover">Discover</string>
    <string name="plot_story">Plot Story</string>
    <string name="see_all">See All</string>
    <string name="favourites">Favourites</string>
    <string name="title_activity_favourites">FavouritesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
