<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_tv_s"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/tv_shows" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/people" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/discover" />
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/favourites"
            />


        <item
            android:id="@+id/nav_watched"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/watched"
            />


        <item
            android:id="@+id/nav_watch_later"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/watch_later"
            />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
