<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.Movies.MovieDetailActivity.MovieDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:fitsSystemWindows="true"
                android:id="@+id/movie_detail_scroll_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <FrameLayout
                android:fitsSystemWindows="true"
                android:visibility="gone"
                android:background="@color/primaryDarkColor"
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/layout"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        style="?attr/buttonBarButtonStyle"
                        android:id="@+id/movie_favs"
                        android:text="@string/favourites"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        style="?attr/buttonBarButtonStyle"
                        android:id="@+id/movie_watched"
                        android:text="@string/watched"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        style="?attr/buttonBarButtonStyle"
                        android:id="@+id/movie_watch_later"
                        android:text="@string/watch_later"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </FrameLayout>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_movies"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/app_bar"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_anchorGravity="bottom|end"
        />

    <include layout="@layout/content_movie_detail" />


</android.support.design.widget.CoordinatorLayout>
